fix: inter-service communication works now for requests including data frames